FIX missing padding on body

--- a/style.css
+++ b/style.css
@@ -17,6 +17,15 @@
 
 body {
   margin: 0;
+  padding: 0 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+body > * {
+  width: 100%;
+  max-width: var(--booki-width);
 }
 
 li {
@@ -29,8 +38,6 @@ a {
 }
 
 header {
-  max-width: var(--booki-width);
-  margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -56,11 +63,6 @@ nav ul a:hover {
 
 header img {
   width: 140px;
-}
-
-main {
-  max-width: var(--booki-width);
-  margin: auto;
 }
 
 h1,
